platform/grafana/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/component: visualization
